--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,17 @@
--- $Id: CHANGES,v 1.129 2010/08/30 07:59:10 tom Exp $
+-- $Id: CHANGES,v 1.133 2011/07/05 21:45:35 tom Exp $
 -------------------------------------------------------------------------------
+
+20110705
+	+ fill in DEC mnemonics on some menus.
+
+20110516
+	+ fix inchar() function to work properly with big-endian machines
+	  (patch by David Kutalek).
+
+20110506
+	+ add some VT520-level menus, e.g., for DSR, DECRQSS.
+
+	+ add VT220 test for DSR Operating Status Report.
 
 20100830
 	+ modify mouse tests to show DECRPM results for the mouse modes, if
