--- a/package/debian/changelog
+++ b/package/debian/changelog
@@ -1,3 +1,10 @@
+vttest-cur (2.7.20120506) unstable; urgency=low
+
+  * Add tests for DECLRMM left/right margin mode.
+  * Improve DECSCUSR/DECRQSS test.
+
+ -- Thomas E. Dickey <dickey@invisible-island.net>  Sun, 25 Mar 2012 15:23:22 -0400
+
 vttest-cur (2.7.20111210) unstable; urgency=low
 
   * Add mouse tests for SGR 1006, 1015
