--- a/vttest.1
+++ b/vttest.1
@@ -1,4 +1,4 @@
-.\" $Id: vttest.1,v 1.12 2004/12/21 00:40:43 tom Exp $
+.\" $Id: vttest.1,v 1.14 2012/04/22 23:39:16 tom Exp $
 .TH VTTEST 1 "LOCAL"
 .
 .SH NAME
@@ -14,10 +14,23 @@ is a program designed to test the functionality of a VT100 terminal
 It tests both display (escape sequence handling) and keyboard.
 .PP
 The program is menu-driven and contains full on-line operating instructions.
+.TP 3
+-
 To run a given menu-item, you must enter its number.
+.TP 3
+-
+Menu items start at zero; this is the "Exit" item in almost all cases.
+.TP 3
+-
 You can run all menu-items (for a given level) by entering an asterisk,
 i.e, `*'.
-.
+.TP 3
+-
+You can force a repaint of the menu items by entering "?".
+.TP 3
+-
+A few menus can be more than one page.  Use "n" and "p" to
+switch to the next or previous page.
 .SH OPTIONS
 You can specify the screen geometry in the form \fI[24x80.132]\fP,
 i.e., 24 lines, 80 minimum columns, 132 maximum columns.
@@ -35,6 +48,9 @@ log test results to \fIvttest.log\fP.
 .B -p
 use padding, e.g., for a VT100 connected to a high-speed line.
 .TP 5
+.B -s
+add time-delay in selected panning/scrolling options to show details.
+.TP 5
 .B -8
 use 8-bit controls (this can be changed with a menu option).
 .
@@ -45,4 +61,4 @@ sometime 1985.
 
 Modified by Thomas Dickey
 from June 1996, to support nonstandard screen geometry,
-VT220-VT420, ISO color and xterm-specific tests.
+VT220-VT520, ISO color and xterm-specific tests.
