--- a/package/debian/changelog
+++ b/package/debian/changelog
@@ -1,3 +1,33 @@
+vttest-cur (2.7.20180811) unstable; urgency=low
+
+  * maintenance updates
+
+ -- Thomas E. Dickey <dickey@invisible-island.net>  Sat, 11 Aug 2018 08:03:11 -0400
+
+vttest-cur (2.7.20180728) unstable; urgency=low
+
+  * maintenance updates
+
+ -- Thomas E. Dickey <dickey@invisible-island.net>  Thu, 26 Jul 2018 17:41:54 -0400
+
+vttest-cur (2.7.20180725) unstable; urgency=low
+
+  * maintenance updates
+
+ -- Thomas E. Dickey <dickey@invisible-island.net>  Sun, 22 Jul 2018 16:51:19 -0400
+
+vttest-cur (2.7.20180702) unstable; urgency=low
+
+  * maintenance updates
+
+ -- Thomas E. Dickey <dickey@invisible-island.net>  Mon, 02 Jul 2018 06:51:59 -0400
+
+vttest-cur (2.7.20150706) unstable; urgency=low
+
+  * maintenance updates
+
+ -- Thomas E. Dickey <dickey@invisible-island.net>  Mon, 06 Jul 2015 05:29:15 -0400
+
 vttest-cur (2.7.20140305) unstable; urgency=low
 
   * maintenance updates
