--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,19 @@
--- $Id: CHANGES,v 1.204 2018/09/12 01:17:54 tom Exp $
+-- $Id: CHANGES,v 1.208 2019/01/05 18:43:43 tom Exp $
 -------------------------------------------------------------------------------
+
+20190105
+	+ added/updated port-files from pkgsrc for test-builds.
+
+	+ updated port-files from FreeBSD for test-builds.
+
+	+ updated/improved configure macros
+	  CF_CC_ENV_FLAGS, CF_GNU_SOURCE, CF_POSIX_C_SOURCE, CF_XOPEN_SOURCE
+
+	+ update config.guess, config.sub
+
+20181116
+	+ improve mouse-tracking test, logging the decoded button- and
+	  modifier-information as well as fixing a special case for button 6.
 
 20180911
 	+ add "-V" option, for version information.
