--- a/CHANGES
+++ b/CHANGES
@@ -1,10 +1,26 @@
--- $Id: CHANGES,v 1.210 2019/07/10 22:01:59 tom Exp $
+-- $Id: CHANGES,v 1.214 2020/03/04 02:10:52 tom Exp $
 -------------------------------------------------------------------------------
+
+20200303
+	+ spelling fixes found with codespell.
+
+	+ correct a few other highlighting items for Turkish NRCS and DEC
+	  Supplemental Graphic NRCS.
+
+	+ correct highlighting for Spanish NRCS pound-sign in character-sets
+	  (report by James Holderness)
+
+	+ updated/improved configure macros
+
+20191231
+	+ updated/improved configure macros
+
+	+ update config.guess, config.sub
 
 20190710
 	+ improve alternate-screen test, with additional cursor-position check.
 
-	+ add extensions found in DEC standard 070 to the primary reponse table.
+	+ add extensions found in DEC standard 070 to the primary response table.
 
 	+ updated/improved configure macros
 
