--- a/package/debian/changelog
+++ b/package/debian/changelog
@@ -1,3 +1,9 @@
+vttest-cur (2.7.20200420) unstable; urgency=low
+
+  * maintenance updates
+
+ -- Thomas E. Dickey <dickey@invisible-island.net>  Mon, 20 Apr 2020 04:10:16 -0400
+
 vttest-cur (2.7.20200303) unstable; urgency=low
 
   * maintenance updates
