--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,12 @@
--- $Id: CHANGES,v 1.219 2020/04/20 22:34:37 tom Exp $
+-- $Id: CHANGES,v 1.222 2020/06/10 00:55:58 tom Exp $
 -------------------------------------------------------------------------------
+
+20200610
+	+ modify DECSCA test to show whether EL/ED and ECH/ICH/DCH ignore
+	  DECSCA.
+
+	+ modify DECERA test to assume that the terminal uses bce, and prompt
+	  for an additional color-change/erase to demonstrate this.
 
 20200420
 	+ improve test-coverage for REP/SD/SL/SR/SU, exercising default params.
