--- a/package/debian/changelog
+++ b/package/debian/changelog
@@ -1,3 +1,9 @@
+vttest-cur (2.7.20200610) unstable; urgency=low
+
+  * maintenance updates
+
+ -- Thomas E. Dickey <dickey@invisible-island.net>  Mon, 08 Jun 2020 15:21:34 -0400
+
 vttest-cur (2.7.20200420) unstable; urgency=low
 
   * maintenance updates
