--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,20 @@
--- $Id: CHANGES,v 1.222 2020/06/10 00:55:58 tom Exp $
+-- $Id: CHANGES,v 1.226 2020/09/20 19:53:54 tom Exp $
 -------------------------------------------------------------------------------
+
+20200920
+	+ add test for xterm's 1016 pixel-coordinates mouse-mode.
+
+	+ add "-q" option to display only the most recent part of a response,
+	  e.g., for any-event mouse tests.
+
+	+ remove obsolete MANIFEST, dist, dist-shar makefile targets, since
+	  those are done by external scripts.
+
+	+ use makefile ".PHONY" feature if available.
+
+	+ updated/improved configure macros, i.e., for compiler-warnings
+
+	+ update config.guess, config.sub
 
 20200610
 	+ modify DECSCA test to show whether EL/ED and ECH/ICH/DCH ignore
