--- a/package/debian/changelog
+++ b/package/debian/changelog
@@ -1,3 +1,9 @@
+vttest-cur (2.7.20200920) unstable; urgency=low
+
+  * maintenance updates
+
+ -- Thomas E. Dickey <dickey@invisible-island.net>  Sun, 20 Sep 2020 11:54:13 -0400
+
 vttest-cur (2.7.20200610) unstable; urgency=low
 
   * maintenance updates
