--- a/package/debian/changelog
+++ b/package/debian/changelog
@@ -1,3 +1,15 @@
+vttest-cur (2.7.20220827) unstable; urgency=low
+
+  * maintenance updates
+
+ -- Thomas E. Dickey <dickey@invisible-island.net>  Sat, 27 Aug 2022 09:32:52 -0400
+
+vttest-cur (2.7.20220227) unstable; urgency=low
+
+  * maintenance updates
+
+ -- Thomas E. Dickey <dickey@invisible-island.net>  Sat, 26 Feb 2022 11:16:32 -0500
+
 vttest-cur (2.7.20220215) unstable; urgency=low
 
   * maintenance updates
