--- a/package/debian/changelog
+++ b/package/debian/changelog
@@ -1,3 +1,9 @@
+vttest-cur (2.7.20221229) unstable; urgency=low
+
+  * maintenance updates
+
+ -- Thomas E. Dickey <dickey@invisible-island.net>  Thu, 28 Dec 2022 17:14:39 -0500
+
 vttest-cur (2.7.20221111) unstable; urgency=low
 
   * maintenance updates
